--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ Metrics/BlockLength:
   Exclude:
     - 'spec/requests/*'
     - 'spec/models/*'
+    - 'spec/routes/*'
 
 RSpec/MultipleExpectations:
   Exclude:
