--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,10 @@ Metrics/BlockLength:
     - 'spec/models/*'
     - 'spec/routes/*'
 
+Metrics/MethodLength:
+  Exclude:
+    - 'app/helpers/tasks_helper.rb'
+
 RSpec/MultipleExpectations:
   Exclude:
     - 'spec/requests/*'
