excluded dashboard_controller.rb from Metrics/MethodLength

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,10 @@ Metrics/BlockLength:
     - 'spec/models/*'
     - 'spec/routes/*'
 
+Metrics/MethodLength:
+  Exclude:
+    - 'app/controllers/dashboard_controller.rb'
+
 RSpec/MultipleExpectations:
   Exclude:
     - 'spec/requests/*'
